@@ -265,6 +265,11 @@ grub_uint64_t EXPORT_FUNC(grub_divmod64) (grub_uint64_t n,
 void EXPORT_FUNC(__enable_execute_stack) (void *addr);
 #endif
 
+#if defined (NEED_REGISTER_FRAME_INFO) && !defined(GRUB_UTIL)
+void EXPORT_FUNC (__register_frame_info) (void);
+void EXPORT_FUNC (__deregister_frame_info) (void);
+#endif
+
 /* Inline functions.  */
 
 static inline unsigned int
